--- a/musclepedia/app/views/main.scala.html
+++ b/musclepedia/app/views/main.scala.html
@@ -5,9 +5,9 @@
 <html>
     <head>
         <title>@title</title>
-        <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/main.css")">
-        <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
-        <script src="@routes.Assets.at("javascripts/hello.js")" type="text/javascript"></script>
+        <script src="@routes.Assets.at("javascript/jquery-1.11.2.js")" type="text/javascript"></script>
+        <script src="@routes.Assets.at("javascript/bootstrap.js")" type="text/javascript"></script>
+        <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/bootstrap.css")">
     </head>
     <body>
         @content
