Tabs zum Funktionieren gebracht

--- a/musclepedia/app/views/login.scala.html
+++ b/musclepedia/app/views/login.scala.html
@@ -15,7 +15,7 @@
             </ul>
             <div class="tab-content">
                 <div role="tabpanel" class="col-md-6 tab-pane active" id="login">
-                    <form method="post">
+                    <form method="get" action="/">
                         <div class="form-group">
                             <h3>Login</h3>
                             <label for="name1">Benutzername</label>
@@ -28,7 +28,7 @@
                     </form>
                 </div>
                 <div role="tabpanel" class="tab-pane col-md-6" id="register">
-                    <form method="post" >
+                    <form method="get" action="/">
                         <div class="form-group">
                             <h3>Registrieren</h3>
                             <label for="name2">Benutzername</label>
@@ -52,4 +52,6 @@
               });
     	</script>
     </div>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
 }
