--- a/musclepedia/app/views/main.scala.html
+++ b/musclepedia/app/views/main.scala.html
@@ -8,6 +8,7 @@
         <script src="@routes.Assets.at("javascript/jquery-1.11.2.js")" type="text/javascript"></script>
         <script src="@routes.Assets.at("javascript/bootstrap.js")" type="text/javascript"></script>
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/bootstrap.css")">
+        <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/main.css")">
     </head>
     <body>
         @content
