--- a/musclepedia/app/views/start.scala.html
+++ b/musclepedia/app/views/start.scala.html
@@ -1,6 +1,4 @@
-@(title: String)(content: Html)
-
-<!DOCTYPE html>
+@(message: String)(content: html)
 
 <html>
     <head>
@@ -19,7 +17,6 @@
                 </div>
             </div>
         </header>
-
         @content
     </body>
 </html>
