Routes eingefügt, Start und Loginseite erstellt

--- a/musclepedia/app/views/login.scala.html
+++ b/musclepedia/app/views/login.scala.html
@@ -7,7 +7,7 @@
             </ul>
             <div class="tab-content">
                 <div role="tabpanel" class="col-md-6 tab-pane active" id="login">
-                    <form method="get" action="/">
+                    <form method="get" action="/start">
                         <div class="form-group">
                             <h3>Login</h3>
                             <label for="name1">Benutzername</label>
@@ -44,6 +44,4 @@
               });
     	</script>
     </div>
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
 }
