--- a/musclepedia/app/views/main.scala.html
+++ b/musclepedia/app/views/main.scala.html
@@ -5,10 +5,11 @@
 <html>
     <head>
         <title>@title</title>
-        <script src="@routes.Assets.at("javascript/jquery-1.11.2.js")" type="text/javascript"></script>
-        <script src="@routes.Assets.at("javascript/bootstrap.js")" type="text/javascript"></script>
-        <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/bootstrap.css")">
-        <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/main.css")">
+        <meta charset="utf-8"/>
+        <script src="@routes.Assets.at("javascripts/jquery-1.11.2.js")" type="text/javascript"></script>
+        <script src="@routes.Assets.at("javascripts/bootstrap.js")" type="text/javascript"></script>
+        <link rel="stylesheet" href="@routes.Assets.at("stylesheets/bootstrap.css")"/>
+        <link rel="stylesheet" href="@routes.Assets.at("stylesheets/main.css")"/>
     </head>
     <body>
         <header class="text-center">
@@ -19,7 +20,8 @@
                 </div>
             </div>
         </header>
-
         @content
+        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
     </body>
 </html>
