--- a/musclepedia/app/views/start.scala.html
+++ b/musclepedia/app/views/start.scala.html
@@ -1,10 +1,13 @@
-@(message: String)(content: html)
+@(title: String)(content: Html)
+
+<!DOCTYPE html>
 
 <html>
     <head>
         <title>@title</title>
-        <script src="@routes.Assets.at("javascript/jquery-1.11.2.js")" type="text/javascript"></script>
-        <script src="@routes.Assets.at("javascript/bootstrap.js")" type="text/javascript"></script>
+        <meta charset="utf-8"/>
+        <script src="@routes.Assets.at("javascripts/jquery-1.11.2.js")" type="text/javascript"></script>
+        <script src="@routes.Assets.at("javascripts/bootstrap.js")" type="text/javascript"></script>
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/bootstrap.css")">
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/main.css")">
     </head>
@@ -17,6 +20,58 @@
                 </div>
             </div>
         </header>
-        @content
+        <div class="container-fluid">
+            <div class="row">
+                <!-- Quotes -->
+                <div class="col-md-2">
+                    <br>
+                    <br>
+                    <br>
+                    <blockquote>
+                        <p> "Go hard or go home" <small> jemand </small> </p>
+                    </blockquote>
+                    <blockquote>
+                        <p> "No Pain No Gain"  <small> jemand anderes </small></p>
+                    </blockquote>
+                    <blockquote>
+                        <p> "Make your body your machine" <small> irgendjemand </small> </p>
+                    </blockquote>
+                </div>
+                <!-- Quotes -->
+
+                <!-- Menue -->
+                <div class="col-md-8">
+                    <ul class="nav nav-tabs">
+                        <li class="active"><a href="#">Home</a></li>
+                        <li class="dropdown" ><a href="#" class="dropdown-toggle" data-toggle="dropdown">Übungen<span class="caret"></span></a>
+                            <ul class="dropdown-menu">
+                                <li> <a> Oberkörper</a> </li>
+                                <li> <a> Arme </a></li>
+                                <li> <a> Beine</a></li>
+                                <li> <a> Bauch</a></li>
+                            </ul>
+                        </li>
+                        <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Pläne <span class="caret"></span></a>
+                            <ul class="dropdown-menu">
+                                <li> <a> Anfänger </a> </li>
+                                <li> <a>Fortgeschritten </a></li>
+                                <li> <a>Profis </a></li>
+                            </ul>
+                        </li>
+                        <li role="presentation"><a href="#">Profil</a></li>
+                        <li role="presentation"><a href="#">Studios</a></li>
+                        <li role="presentation"><a href="/help">Hilfe</a></li>
+                    </ul>
+                    <br>
+                    <div>
+                        @content
+                    </div>
+                </div>
+                <!-- Menue -->
+                <div class="col-md-2"></div>
+            </div>
+        </div>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+        <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
     </body>
 </html>
