--- a/musclepedia/app/views/start.scala.html
+++ b/musclepedia/app/views/start.scala.html
@@ -45,7 +45,7 @@
                         <li class="active"><a href="#">Home</a></li>
                         <li class="dropdown" ><a href="#" class="dropdown-toggle" data-toggle="dropdown">Übungen<span class="caret"></span></a>
                             <ul class="dropdown-menu">
-                                <li> <a> Oberkörper</a> </li>
+                                <li> <a href="/oberkoerper"> Oberkörper</a> </li>
                                 <li> <a> Arme </a></li>
                                 <li> <a> Beine</a></li>
                                 <li> <a> Bauch</a></li>
