--- a/musclepedia/app/views/home.scala.html
+++ b/musclepedia/app/views/home.scala.html
@@ -6,6 +6,7 @@
             Sie sich ganz einfach Ihren individuellen Trainingsplan zusammen.</p>
         </div>
         <div class="col-md-4">
+            <img src="@routes.Assets.at("images/home_bild.jpg")" id="home_img_1"/>
         </div>
     </div>
 }
