--- a/musclepedia/app/views/help.scala.html
+++ b/musclepedia/app/views/help.scala.html
@@ -1,7 +1,6 @@
 @start("Musclepedia"){
     <script src="@routes.Assets.at("javascripts/bmi.js")" type="text/javascript"></script>
     <div class="row">
-        <script src=""></script>
         <div class="col-md-8" id="helppage">
             <p class="erklaerung">Wilkommen auf Musclepedia die Seite rund um Fitness! Unter Punkt X findest du Y unter Punkt z findest du Ö unter......</p>
             <p>Um dir bei denen Fitnessprogramm zu Helfen bieten wir dir einen BMI Rechner und einen Kalorinrechner an beide findest du unten</p>
@@ -14,7 +13,7 @@
                 <option>männlich</option>
                 <option>weiblich</option>
             </select>
-            <p>Überprüfe bitte alle Angaben <input type="button" onClick="bmi()" class="success" value="RECHNE!"></p>
+            <p>Überprüfe bitte alle Angaben <input type="button" onclick="javascript:bmi()" class="success" value="BMI berechnen"></p>
             <div id="bmierg"></div>
         </div>
     </div>
