--- a/musclepedia/app/views/main.scala.html
+++ b/musclepedia/app/views/main.scala.html
@@ -8,13 +8,13 @@
         <meta charset="utf-8"/>
         <script src="@routes.Assets.at("javascripts/jquery-1.11.2.js")" type="text/javascript"></script>
         <script src="@routes.Assets.at("javascripts/bootstrap.js")" type="text/javascript"></script>
-        <link rel="stylesheet" href="@routes.Assets.at("stylesheets/bootstrap.css")"/>
-        <link rel="stylesheet" href="@routes.Assets.at("stylesheets/main.css")"/>
+        <link rel="stylesheet" href="@routes.Assets.at("stylesheets/bootstrap.css")">
+        <link rel="stylesheet" href="@routes.Assets.at("stylesheets/main.css")">
     </head>
     <body>
         <header class="text-center">
             <div class="row">
-                <div class="col-md-8 col-md-offset-2 img_login">
+                <div class="col-md-8 col-md-offset-2">
                     <h1>Musclepedia</h1>
                     <h2>Starkes Wissen rund um Fitness</h2>
                 </div>
