--- a/musclepedia/app/views/start.scala.html
+++ b/musclepedia/app/views/start.scala.html
@@ -10,6 +10,8 @@
         <script src="@routes.Assets.at("javascripts/bootstrap.js")" type="text/javascript"></script>
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/bootstrap.css")">
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/main.css")">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
     </head>
     <body>
         <header class="text-center">
@@ -42,16 +44,18 @@
                 <!-- Menue -->
                 <div class="col-md-8">
                     <ul class="nav nav-tabs">
-                        <li class="active"><a href="#">Home</a></li>
-                        <li class="dropdown" ><a href="#" class="dropdown-toggle" data-toggle="dropdown">Übungen<span class="caret"></span></a>
-                            <ul class="dropdown-menu">
-                                <li> <a href="/oberkoerper"> Oberkörper</a> </li>
-                                <li> <a> Arme </a></li>
-                                <li> <a> Beine</a></li>
-                                <li> <a> Bauch</a></li>
+                        <li class="active"><a href="/start">Home</a></li>
+                        <li class="dropdown" >
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Übungen<span class="caret"></span></a>
+                            <ul class="dropdown-menu" role="menu">
+                                <li role="presentation"> <a href="/oberkoerper"> Oberkörper</a> </li>
+                                <li role="presentation"> <a role="menuitem" tabindex="-1" href="#"> Arme </a></li>
+                                <li role="presentation"> <a role="menuitem" tabindex="-1" href="#"> Beine </a></li>
+                                <li role="presentation"> <a role="menuitem" tabindex="-1" href="#"> Bauch </a></li>
                             </ul>
                         </li>
-                        <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Pläne <span class="caret"></span></a>
+                        <li class="dropdown">
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Pläne <span class="caret"></span></a>
                             <ul class="dropdown-menu">
                                 <li> <a>Anfänger</a></li>
                                 <li> <a>Fortgeschritten </a></li>
