--- a/musclepedia/app/views/login.scala.html
+++ b/musclepedia/app/views/login.scala.html
@@ -19,8 +19,8 @@
                         </div>
                     </form>
                 </div>
-                <div class="col-md-6">
-                    <img src="@routes.Assets.at("images/login_bild.jpg")" id="login_img_1"/>
+                <div class="col-md-6 container">
+                    <img src="@routes.Assets.at("images/login_bild.jpg")"/>
                 </div>
                 <div role="tabpanel" class="tab-pane col-md-6" id="register">
                     <form method="get" action="/">
