--- a/musclepedia/app/views/main.scala.html
+++ b/musclepedia/app/views/main.scala.html
@@ -9,17 +9,19 @@
         <script src="@routes.Assets.at("javascripts/jquery-1.11.2.js")" type="text/javascript"></script>
         <script src="@routes.Assets.at("javascripts/bootstrap.js")" type="text/javascript"></script>
         <link rel="stylesheet" href="@routes.Assets.at("stylesheets/bootstrap.css")">
-        <link rel="stylesheet" href="@routes.Assets.at("stylesheets/main.css")">
+        <link rel="stylesheet" href="@routes.Assets.at("stylesheets/loginpage.css")">
     </head>
     <body>
         <header class="text-center">
             <div class="row">
-                <div class="col-md-8 col-md-offset-2">
+                <div class="col-md-8 col-md-offset-2" id="login_img">
                     <h1>Musclepedia</h1>
                     <h2>Starkes Wissen rund um Fitness</h2>
                 </div>
             </div>
+            <br>
         </header>
+
         @content
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
