Help page mit richtigen Text befüllt, Tabs eingerichtet (das Javascript geht immernoch nicht), Studios- Seite eingefügt mit Text befüllt und 2 Test Studios eingefügt, wäre nett wenn man mir etwas zur darstellung sagen würd

--- a/musclepedia/app/views/start.scala.html
+++ b/musclepedia/app/views/start.scala.html
@@ -63,7 +63,7 @@
                             </ul>
                         </li>
                         <li role="presentation"><a href="#">Profil</a></li>
-                        <li role="presentation"><a href="#">Studios</a></li>
+                        <li role="presentation"><a href="/studios">Studios</a></li>
                         <li role="presentation"><a href="/help">Hilfe</a></li>
                     </ul>
                     <br>
