--- a/musclepedia/app/views/help.scala.html
+++ b/musclepedia/app/views/help.scala.html
@@ -1,20 +1,45 @@
 @start("Musclepedia"){
     <script src="@routes.Assets.at("javascripts/bmi.js")" type="text/javascript"></script>
-    <div class="row">
+    <div class="row text-center">
         <div class="col-md-8" id="helppage">
-            <p class="erklaerung">Wilkommen auf Musclepedia die Seite rund um Fitness! Unter Punkt X findest du Y unter Punkt z findest du Ö unter......</p>
-            <p>Um dir bei denen Fitnessprogramm zu Helfen bieten wir dir einen BMI Rechner und einen Kalorinrechner an beide findest du unten</p>
-            <p> Hier werden warscheinlich Tabs eingefügt einfach weil ich Tabs mag</p>
+            <p class="erklaerung">Wilkommen auf Musclepedia die Seite rund um Fitness! Unter Übungen kannst du Übungen jeder Art ansehen und zu deinen Persönlichen Trainingsplan hinzufügen.
+            Dabei wird zwischen den einzelnen Körberteilen unterschieden.</p>
+            <p>Der Reiter <a href="#">Pläne</a> zeigt dir verschiedene standard Pläne sowie deinen eigenen von dir erstellten Plan</p>
+            <p> Deine Profileinstellungen kannst du unter <a href="#">Profil</a> ändern, sollte das nicht klappen kannst du uns mit <a href="/kontakt">Kontakt</a> erreichen</p>
+            <p><a href="/studios">Studios</a> führt dich zu einer Liste aller Orte deren Studios wir hier aufführen, klickst du auf einen Ort kannst du sämtliche Studios und deren Bewertung ansehen sowie selber bewertungen abgeben. </p>
+            <p>Unter dieser Seite findest du sowohl einen BMI-Rechner wie auch einen Kalorinrechner um dir zu Helfen sowei unten noch ein FAQ </p>
+            <div role="tabpanel">
+                <ul class="nav nav-tabs" role="tablist">
+                    <li role="presentation" class="active"><a href="#bmire" role="tab" data-toggle="tab">BMI-Rechner </a> </li>
+                    <li role="presentation"><a href="ä#kalre"role="tab" data-toggle="tab">Kalorinrechner</a> </li>
+                </ul>
+                <div class="tab-content">
+                    <div role="tabpanel" class="tab-pane active" id="bmire">
             <h3>BMI Rechner </h3>
-            <p> ACHTUNG BMI kann nicht zwischen Muskeln und Fett unterscheiden! Daher soll man Vorsicht bei der Auswertung der Ergebnisse sein!</p>
-            <p><input type="text" id="gewicht" />Gewicht in KG </p>
-            <p><input type="text" id="groeße"/>Größe in m </p>
+            <p> ACHTUNG BMI kann nicht zwischen Muskeln und Fett unterscheiden! Daher soll man vorsichtig bei der Auswertung der Ergebnisse sein!</p>
+            <p><input type="text" id="gew" placeholder="150"/>Gewicht </p>
+            <p><input type="text" id="gro" placeholder="1,X"/>Größe </p>
             <select id="gesch">
                 <option>männlich</option>
                 <option>weiblich</option>
             </select>
-            <p>Überprüfe bitte alle Angaben <input type="button" onclick="javascript:bmi()" class="success" value="BMI berechnen"></p>
+            <p>Überprüfe bitte alle Angaben <input type="button" onclick="javascript:bmirechnen()" value="BMI berechnen"></p>
             <div id="bmierg"></div>
         </div>
+                    <div role="tabpanel" class="tab-pane" id="kalre">
+                        <h3>Keine Ahnung was hier kommen soll</h3>
+                        <p> habe weder eine Idee was das hier eigentlich ist noch was für ne Formel notwendig wäre!</p>
+
+                    </div>
+                </div>
+
+            </div>
+            </div>
+        <script type="text/javascript">
+            $(document).ready(function ($) {
+                $('#myTab').tab();
+              });
+    	</script>
     </div>
+
 }
