--- a/musclepedia/app/views/start.scala.html
+++ b/musclepedia/app/views/start.scala.html
@@ -49,9 +49,9 @@
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Übungen<span class="caret"></span></a>
                             <ul class="dropdown-menu" role="menu">
                                 <li role="presentation"> <a href="/oberkoerper"> Oberkörper</a> </li>
-                                <li role="presentation"> <a role="menuitem" tabindex="-1" href="#"> Arme </a></li>
-                                <li role="presentation"> <a role="menuitem" tabindex="-1" href="#"> Beine </a></li>
-                                <li role="presentation"> <a role="menuitem" tabindex="-1" href="#"> Bauch </a></li>
+                                <li role="presentation"> <a role="menuitem" tabindex="-1" href="/arme"> Arme </a></li>
+                                <li role="presentation"> <a role="menuitem" tabindex="-1" href="/beine"> Beine </a></li>
+                                <li role="presentation"> <a role="menuitem" tabindex="-1" href="/bauch"> Bauch </a></li>
                             </ul>
                         </li>
                         <li class="dropdown">
