--- a/musclepedia/app/views/start.scala.html
+++ b/musclepedia/app/views/start.scala.html
@@ -48,10 +48,10 @@
                         <li class="dropdown" >
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Übungen<span class="caret"></span></a>
                             <ul class="dropdown-menu" role="menu">
-                                <li role="presentation"> <a href="/oberkoerper"> Oberkörper</a> </li>
-                                <li role="presentation"> <a role="menuitem" tabindex="-1" href="/arme"> Arme </a></li>
-                                <li role="presentation"> <a role="menuitem" tabindex="-1" href="/beine"> Beine </a></li>
-                                <li role="presentation"> <a role="menuitem" tabindex="-1" href="/bauch"> Bauch </a></li>
+                                <li role="presentation"> <a href="/uebungen_oberkoerper"> Oberkörper</a> </li>
+                                <li role="presentation"> <a role="menuitem" tabindex="-1" href="/uebungen_arme"> Arme </a></li>
+                                <li role="presentation"> <a role="menuitem" tabindex="-1" href="/uebungen_beine"> Beine </a></li>
+                                <li role="presentation"> <a role="menuitem" tabindex="-1" href="/uebungen_bauch"> Bauch </a></li>
                             </ul>
                         </li>
                         <li class="dropdown">
