--- a/musclepedia/app/views/login.scala.html
+++ b/musclepedia/app/views/login.scala.html
@@ -36,43 +36,43 @@
                         </div>
                     </form>
                 </div>
-            </div>
-        </div>
-        <div class="col-md-4">
-            <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-                    <!-- Indicators -->
-                <ol class="carousel-indicators">
-                    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-                    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-                    <li data-target="#carousel-example-generic" data-slide-to="2"></li>
-                </ol>
+                <div class="col-md-6">
+                    <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+                            <!-- Indicators -->
+                        <ol class="carousel-indicators">
+                            <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+                            <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+                            <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+                        </ol>
 
-                    <!-- Wrapper for slides -->
-                <div class="carousel-inner" role="listbox">
-                    <div class="item active">
-                        <img src="@routes.Assets.at("images/login_bild.jpg")" alt="...">
-                        <div class="carousel-caption">
-                            <p>Bild1</p>
-                        </div>
-                    </div>
-                    <div class="item">
-                        <img src="..." alt="...">
-                        <div class="carousel-caption">
+                            <!-- Wrapper for slides -->
+                        <div class="carousel-inner" role="listbox">
+                            <div class="item active">
+                                <img src="@routes.Assets.at("images/login_bild.jpg")" alt="...">
+                                <div class="carousel-caption">
+                                    <h2>Übungslehre</h2>
+                                </div>
+                            </div>
+                            <div class="item">
+                                <img src="@routes.Assets.at("images/login_slide.jpg")" alt="...">
+                                <div class="carousel-caption">
+                                    <h2>Krafttraining</h2>
+                                </div>
+                            </div>
                             ...
                         </div>
-                    </div>
-                    ...
-                </div>
 
-                    <!-- Controls -->
-                <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
-                    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-                    <span class="sr-only">Previous</span>
-                </a>
-                <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
-                    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-                    <span class="sr-only">Next</span>
-                </a>
+                            <!-- Controls -->
+                        <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+                            <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+                            <span class="sr-only">Previous</span>
+                        </a>
+                        <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+                            <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+                            <span class="sr-only">Next</span>
+                        </a>
+                    </div>
+                </div>
             </div>
         </div>
         <script type="text/javascript">
