--- a/musclepedia/public/stylesheets/loginpage.css
+++ b/musclepedia/public/stylesheets/loginpage.css
@@ -1,5 +1,5 @@
 body{
-    background-color: #777777;
+    background-color: #4cae4c;
 }
 #login_img{
     background-image: url("../images/login_background.jpg");
