Profil Seite hinzugefügt, sinnlose commit gemacht, werde demnächst mal ein nutzer objekt erstellen

--- a/musclepedia/app/views/start.scala.html
+++ b/musclepedia/app/views/start.scala.html
@@ -62,7 +62,7 @@
                                 <li> <a>Profis </a></li>
                             </ul>
                         </li>
-                        <li role="presentation"><a href="#">Profil</a></li>
+                        <li role="presentation"><a href="/profil">Profil</a></li>
                         <li role="presentation"><a href="/studios">Studios</a></li>
                         <li role="presentation"><a href="/help">Hilfe</a></li>
                     </ul>
