--- a/musclepedia/app/views/start.scala.html
+++ b/musclepedia/app/views/start.scala.html
@@ -9,7 +9,7 @@
         <script src="@routes.Assets.at("javascripts/jquery-1.11.2.js")" type="text/javascript"></script>
         <script src="@routes.Assets.at("javascripts/bootstrap.js")" type="text/javascript"></script>
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/bootstrap.css")">
-        <link rel="stylesheet" media="screen" href="@routes.Assets.at("../../public/stylesheets/loginpage.css")">
+        <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/loginpage.css")">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
     </head>
@@ -65,6 +65,7 @@
                         <li role="presentation"><a href="/profil">Profil</a></li>
                         <li role="presentation"><a href="/studios">Studios</a></li>
                         <li role="presentation"><a href="/help">Hilfe</a></li>
+                        <li role="presentation"><a href="/">Logout</a></li>
                     </ul>
                     <br>
                     <div>
