Windows 1252 entfernt und x-UTF-8 XL BOM gemacht.
Haben jetzt doch utf-8 drin

--- a/musclepedia/app/views/knStudios.scala.html
+++ b/musclepedia/app/views/knStudios.scala.html
@@ -6,7 +6,7 @@
                 <li>
                     <div id="platz1">
                         <h3>TESTSTUDIO </h3>
-                        <p>Konstanz Straﬂenname Hausnr ÷ffnungszeiten:Zeit   Preis:Geld</p>
+                        <p>Konstanz Stra√üenname Hausnr √ñffnungszeiten:Zeit   Preis:Geld</p>
                         <div class="col-md-4 col-md-offset-2">
                             <img src="@routes.Assets.at("images/favicon.png")"/>
                         </div>
@@ -18,12 +18,12 @@
                                 <th>Deine Bewertung </th>
                             </tr>
                             <tr>
-                                <td>÷ffnungszeiten: </td>
+                                <td>√ñffnungszeiten: </td>
                                 <td>5.4 </td>
                                 <td>Nicht abgeben </td>
                             </tr>
                             <tr>
-                                <td>Ger‰te: </td>
+                                <td>Ger√§te: </td>
                                 <td>10 </td>
                                 <td>Nicht abgeben </td>
                             </tr>
@@ -48,7 +48,7 @@
                                 <td>Nicht abgeben </td>
                             </tr>
                         </table>
-                            <button class="btn btn-primary">Eigene Bewertung abgeben/‰ndern</button>
+                            <button class="btn btn-primary">Eigene Bewertung abgeben/√§ndern</button>
                         </div>
                     </div>
 
@@ -56,7 +56,7 @@
                 <li>
                     <div id="platz2">
                         <h3>TESTSTUDIO 2 </h3>
-                        <p>Konstanz Straﬂenname Hausnr ÷ffnungszeiten:Zeit   Preis:Geld</p>
+                        <p>Konstanz Stra√üenname Hausnr √ñffnungszeiten:Zeit   Preis:Geld</p>
                         <div class="col-md-4 col-md-offset-2">
                             <img src="@routes.Assets.at("images/favicon.png")"/>
                         </div>
@@ -68,12 +68,12 @@
                                     <th>Deine Bewertung </th>
                                 </tr>
                                 <tr>
-                                    <td>÷ffnungszeiten: </td>
+                                    <td>√ñffnungszeiten: </td>
                                     <td>5.4 </td>
                                     <td>Nicht abgeben </td>
                                 </tr>
                                 <tr>
-                                    <td>Ger‰te: </td>
+                                    <td>Ger√§te: </td>
                                     <td>10 </td>
                                     <td>Nicht abgeben </td>
                                 </tr>
@@ -98,7 +98,7 @@
                                     <td>Nicht abgeben </td>
                                 </tr>
                             </table>
-                            <button class="btn btn-primary">Eigene Bewertung abgeben/‰ndern</button>
+                            <button class="btn btn-primary">Eigene Bewertung abgeben/√§ndern</button>
                         </div>
                     </div>
 
