--- a/musclepedia/app/views/start.scala.html
+++ b/musclepedia/app/views/start.scala.html
@@ -42,36 +42,8 @@
                 <!-- Quotes -->
 
                 <!-- Menue -->
-                <div class="col-md-8">
-                    <ul class="nav nav-tabs">
-                        <li class="active"><a href="/start">Home</a></li>
-                        <li class="dropdown" >
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Übungen<span class="caret"></span></a>
-                            <ul class="dropdown-menu" role="menu">
-                                <li role="presentation"> <a href="/uebungen_oberkoerper"> Oberkörper</a> </li>
-                                <li role="presentation"> <a role="menuitem" tabindex="-1" href="/uebungen_arme"> Arme </a></li>
-                                <li role="presentation"> <a role="menuitem" tabindex="-1" href="/uebungen_beine"> Beine </a></li>
-                                <li role="presentation"> <a role="menuitem" tabindex="-1" href="/uebungen_bauch"> Bauch </a></li>
-                            </ul>
-                        </li>
-                        <li class="dropdown">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Pläne <span class="caret"></span></a>
-                            <ul class="dropdown-menu">
-                                <li> <a>Anfänger</a></li>
-                                <li> <a>Fortgeschritten </a></li>
-                                <li> <a>Profis </a></li>
-                            </ul>
-                        </li>
-                        <li role="presentation"><a href="/profil">Profil</a></li>
-                        <li role="presentation"><a href="/studios">Studios</a></li>
-                        <li role="presentation"><a href="/help">Hilfe</a></li>
-                        <li role="presentation"><a href="/">Logout</a></li>
-                    </ul>
-                    <br>
-                    <div>
-                        @content
-                    </div>
-                </div>
+                    <div>@content</div>
+
                 <!-- Menue -->
                 <div class="col-md-2"></div>
             </div>
