--- a/musclepedia/app/views/uebungen_oberkoerper.scala.html
+++ b/musclepedia/app/views/uebungen_oberkoerper.scala.html
@@ -1,7 +1,7 @@
 @start("Musclepedia"){
     <script src="@routes.Assets.at("javascripts/uebungen.js")" type="text/javascript"></script>
     <div class="text-center">
-        <h3 class="text-center"> Oberkörper-Übungen</h3>
+        <h3 class="text-center"> OberkÃ¶rper-Ãœbungen</h3>
         </br>
         <table class="table table-striped">
             <thead class="text-center">
@@ -17,22 +17,22 @@
             </thead>
             <tbody class="text-center">
                 <tr>
-                    <td>LH-Flachbankdrücken</td>
-                    <td>Flach hinlegen, Füße fest am Boden, den Ringfinger an der Einkerbung der Stande platzieren um richtige Griffbreite zu haben </td>
+                    <td>LH-FlachbankdrÃ¼cken</td>
+                    <td>Flach hinlegen, FÃ¼ÃŸe fest am Boden, den Ringfinger an der Einkerbung der Stande platzieren um richtige Griffbreite zu haben </td>
                     <td><img src="@routes.Assets.at("images/bank.jpg")" height="150" width="150" alt="bank.jpg" class="img-thumbnail" onmouseover="javascript:bigImg(this)" onmouseout="javascript:normalImg(this)"/></td>
                     <td>Fortgeschritten</td>
                     <td> <input class="btn btn-success" type="button" value="add to plan" onclick="javascript:addToPlan()"> </td>
                 </tr>
                 <tr>
                     <td>Kreuzheben</td>
-                    <td>Schulterbreiter Stand und Griff, Brust raus damit der Rücken gerade ist</td>
+                    <td>Schulterbreiter Stand und Griff, Brust raus damit der RÃ¼cken gerade ist</td>
                     <td><img src="@routes.Assets.at("images/bank.jpg")" height="150" width="150" alt="bank2.jpg" class="img-thumbnail" onmouseover="javascript:bigImg(this)" onmouseout="javascript:normalImg(this)"/></td>
                     <td>Fortgeschritten</td>
                     <td> <input class="btn btn-success" type="button" value="add to plan" onclick="javascript:addToPlan()"> </td>
                 </tr>
                 <tr>
                     <td>LH-Rudern</td>
-                    <td> Schulterbreiter Stand, Oberkörper nach vorn gebeugt, Brust raus, Rücken gerade </td>
+                    <td> Schulterbreiter Stand, OberkÃ¶rper nach vorn gebeugt, Brust raus, RÃ¼cken gerade </td>
                     <td><img src="@routes.Assets.at("images/bank.jpg")" height="150" width="150" alt="bank.jpg" class="img-thumbnail" onmouseover="javascript:bigImg(this)" onmouseout="javascript:normalImg(this)"/></td>
                     <td>Fortgeschritten</td>
                     <td> <input class="btn btn-success" type="button" value="add to plan" onclick="javascript:addToPlan()"> </td>
