--- a/musclepedia/app/views/login.scala.html
+++ b/musclepedia/app/views/login.scala.html
@@ -50,7 +50,7 @@
                             <div class="item active">
                                 <img src="@routes.Assets.at("images/login_bild.jpg")" alt="...">
                                 <div class="carousel-caption">
-                                    <h2>Übungslehre</h2>
+                                    <h2>Ãœbungslehre</h2>
                                 </div>
                             </div>
                             <div class="item">
