--- a/musclepedia/app/views/uebungen_arme.scala.html
+++ b/musclepedia/app/views/uebungen_arme.scala.html
@@ -1,7 +1,7 @@
 @start("Musclepedia"){
   <script src="@routes.Assets.at("javascripts/uebungen.js")" type="text/javascript"></script>
   <div class="text-center">
-    <h3 class="text-center"> Arm-Übungen</h3>
+    <h3 class="text-center"> Arm-Ãœbungen</h3>
     </br>
     <table class="table table-striped">
       <thead class="text-center">
@@ -31,7 +31,7 @@
           <td> <input class="btn btn-success" type="button" value="add to plan" onclick="javascript:addToPlan()"> </td>
         </tr>
         <tr>
-          <td>Klimmzüge</td>
+          <td>KlimmzÃ¼ge</td>
           <td>Hier kommt die Beschreibung</td>
           <td><img src="@routes.Assets.at("images/bank.jpg")" height="150" width="150" alt="bank.jpg" class="img-thumbnail" onmouseover="javascript:bigImg(this)" onmouseout="javascript:normalImg(this)"/></td>
           <td>Fortgeschritten</td>
