--- a/musclepedia/app/views/uebungen_bauch.scala.html
+++ b/musclepedia/app/views/uebungen_bauch.scala.html
@@ -1,8 +1,8 @@
 @start("Musclepedia"){
   <script src="@routes.Assets.at("javascripts/uebungen.js")" type="text/javascript"></script>
   <div class="text-center">
-    <h3 class="text-center"> Bauch-‹bungen</h3>
-    </br>
+    <h3 class="text-center"> Bauch-√úbungen</h3>
+    <br>
     <table class="table table-striped">
       <thead class="text-center">
         <div class="container">
@@ -20,7 +20,7 @@
           <td>Crunches</td>
           <td>Hier kommt die Beschreibung </td>
           <td><img src="@routes.Assets.at("images/bank.jpg")" height="150" width="150" alt="bank.jpg" class="img-thumbnail" onmouseover="javascript:bigImg(this)" onmouseout="javascript:normalImg(this)"/></td>
-          <td>Anf‰nger</td>
+          <td>Anf√§nger</td>
           <td> <input class="btn btn-success" type="button" value="add to plan" onclick="javascript:addToPlan()"> </td>
         </tr>
         <tr>
@@ -34,7 +34,7 @@
           <td>Sit-Ups</td>
           <td> Hier kommt die Beschreibung </td>
           <td><img src="@routes.Assets.at("images/bank.jpg")" height="150" width="150" alt="bank.jpg" class="img-thumbnail" onmouseover="javascript:bigImg(this)" onmouseout="javascript:normalImg(this)"/></td>
-          <td>Anf‰nger</td>
+          <td>Anf√§nger</td>
           <td> <input class="btn btn-success" type="button" value="add to plan" onclick="javascript:addToPlan()"> </td>
         </tr>
       </tbody>
