--- a/musclepedia/app/views/uebungen_beine.scala.html
+++ b/musclepedia/app/views/uebungen_beine.scala.html
@@ -1,7 +1,7 @@
 @start("Musclepedia"){
   <script src="@routes.Assets.at("javascripts/uebungen.js")" type="text/javascript"></script>
   <div class="text-center">
-    <h3 class="text-center"> Bein-Übungen</h3>
+    <h3 class="text-center"> Bein-Ãœbungen</h3>
     </br>
     <table class="table table-striped">
       <thead class="text-center">
