--- a/musclepedia/app/views/help.scala.html
+++ b/musclepedia/app/views/help.scala.html
@@ -1,6 +1,32 @@
 @start("Musclepedia"){
     <script src="@routes.Assets.at("javascripts/bmi.js")" type="text/javascript"></script>
-    <div class="row text-center">
+    <div class="col-md-8">
+        <ul class="nav nav-tabs">
+            <li class><a href="/start">Home</a></li>
+            <li class="dropdown" >
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Übungen<span class="caret"></span></a>
+                <ul class="dropdown-menu" role="menu">
+                    <li role="presentation"> <a href="/uebungen_oberkoerper"> Oberkörper</a> </li>
+                    <li role="presentation"> <a role="menuitem" tabindex="-1" href="/uebungen_arme"> Arme </a></li>
+                    <li role="presentation"> <a role="menuitem" tabindex="-1" href="/uebungen_beine"> Beine </a></li>
+                    <li role="presentation"> <a role="menuitem" tabindex="-1" href="/uebungen_bauch"> Bauch </a></li>
+                </ul>
+            </li>
+            <li class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Pläne <span class="caret"></span></a>
+                <ul class="dropdown-menu">
+                    <li> <a>Anfänger</a></li>
+                    <li> <a>Fortgeschritten </a></li>
+                    <li> <a>Profis </a></li>
+                </ul>
+            </li>
+            <li role="presentation" class><a href="/profil">Profil</a></li>
+            <li role="presentation" class><a href="/studios">Studios</a></li>
+            <li role="presentation" class="active"><a href="/help">Hilfe</a></li>
+            <li role="presentation" class><a href="/">Logout</a></li>
+        </ul>
+        <br>
+    <div class="row text-left">
         <div class="col-md-8" id="helppage">
             <p class="erklaerung">Wilkommen auf Musclepedia die Seite rund um Fitness! Unter Übungen kannst du Übungen jeder Art ansehen und zu deinen Persönlichen Trainingsplan hinzufügen.
             Dabei wird zwischen den einzelnen Körberteilen unterschieden.</p>
