--- a/musclepedia/app/views/start.scala.html
+++ b/musclepedia/app/views/start.scala.html
@@ -9,6 +9,7 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
         <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
         <script src="@routes.Assets.at("javascripts/init.js")"></script>
+
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/bootstrap.css")">
         <link rel="stylesheet" href="@routes.Assets.at("stylesheets/loginpage.css")">
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/loginpage.css")">
@@ -45,17 +46,17 @@
                 <!-- Menue -->
                 <div class="col-md-8">
                     <ul class="nav nav-tabs">
-                        <li><a href="/start">Home</a></li>
-                        <li class="dropdown" >
+                        <li id="start"><a href="/start">Home</a></li>
+                        <li class="dropdown" id="uebungen">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Übungen<span class="caret"></span></a>
                             <ul class="dropdown-menu" role="menu">
-                                <li role="presentation"> <a href="/uebungen_oberkoerper"> Oberkörper</a> </li>
+                                <li role="presentation"> <a role="menuitem" href="/uebungen_oberkoerper"> Oberkörper</a> </li>
                                 <li role="presentation"> <a role="menuitem" tabindex="-1" href="/uebungen_arme"> Arme </a></li>
                                 <li role="presentation"> <a role="menuitem" tabindex="-1" href="/uebungen_beine"> Beine </a></li>
                                 <li role="presentation"> <a role="menuitem" tabindex="-1" href="/uebungen_bauch"> Bauch </a></li>
                             </ul>
                         </li>
-                        <li class="dropdown">
+                        <li class="dropdown" id="plaene">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Pläne <span class="caret"></span></a>
                             <ul class="dropdown-menu">
                                 <li> <a>Anfänger</a></li>
@@ -63,9 +64,9 @@
                                 <li> <a>Profis </a></li>
                             </ul>
                         </li>
-                        <li role="presentation"><a href="/profil">Profil</a></li>
-                        <li role="presentation"><a href="/studios">Studios</a></li>
-                        <li role="presentation"><a href="/help">Hilfe</a></li>
+                        <li role="presentation" id="profil"><a href="/profil">Profil</a></li>
+                        <li role="presentation" id="studios"><a href="/studios">Studios</a></li>
+                        <li role="presentation" id="help"><a href="/help">Hilfe</a></li>
                         <li role="presentation"><a href="/">Logout</a></li>
                     </ul>
                     <br>
