--- a/musclepedia/app/views/studios.scala.html
+++ b/musclepedia/app/views/studios.scala.html
@@ -1,4 +1,30 @@
 @start("Studiosuche"){
+    <div class="col-md-8">
+        <ul class="nav nav-tabs">
+            <li class><a href="/start">Home</a></li>
+            <li class="dropdown" >
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Übungen<span class="caret"></span></a>
+                <ul class="dropdown-menu" role="menu">
+                    <li role="presentation"> <a href="/uebungen_oberkoerper"> Oberkörper</a> </li>
+                    <li role="presentation"> <a role="menuitem" tabindex="-1" href="/uebungen_arme"> Arme </a></li>
+                    <li role="presentation"> <a role="menuitem" tabindex="-1" href="/uebungen_beine"> Beine </a></li>
+                    <li role="presentation"> <a role="menuitem" tabindex="-1" href="/uebungen_bauch"> Bauch </a></li>
+                </ul>
+            </li>
+            <li class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Pläne <span class="caret"></span></a>
+                <ul class="dropdown-menu">
+                    <li> <a>Anfänger</a></li>
+                    <li> <a>Fortgeschritten </a></li>
+                    <li> <a>Profis </a></li>
+                </ul>
+            </li>
+            <li role="presentation" class><a href="/profil">Profil</a></li>
+            <li role="presentation" class="active"><a href="/studios">Studios</a></li>
+            <li role="presentation" class><a href="/help">Hilfe</a></li>
+            <li role="presentation" class><a href="/">Logout</a></li>
+        </ul>
+        <br>
     <div class="row text-center">
         <div class="col-md-8 col-md-offset-2" id="studios">
             <p> Hier kannst du Auswählen aus welchen Ort du Studios ansehen und bewerten willst derzeit haben wir Studios aus folgenden Orten in unserer Datenbank: </p>
@@ -7,5 +33,6 @@
             <p><a href="/knstudio">Singen </a></p>
             <p>Sollten noch einige Studios fehlen wende dich an unseren Kontakt(Eventuell bauen wir hier noch eine Funktion ein) </p>
          </div>
+    </div>
     </div>
 }
