--- a/musclepedia/app/views/help.scala.html
+++ b/musclepedia/app/views/help.scala.html
@@ -1,5 +1,6 @@
 @start("Musclepedia"){
-    <script src="@routes.Assets.at("javascripts/bmi.js")" type="text/javascript"></script>
+    <script src="@routes.Assets.at("javascripts/help_bmi.js")" type="text/javascript"></script>
+    <script src="@routes.Assets.at("javascripts/help_kalrechner.js")" type="text/javascript"></script>
     <div class="row text-left">
         <div class="col-md-8" id="helppage">
             <p class="erklaerung">Wilkommen auf Musclepedia die Seite rund um Fitness! Unter Übungen kannst du Übungen jeder Art ansehen und zu deinen Persönlichen Trainingsplan hinzufügen.
@@ -17,8 +18,8 @@
                     <div role="tabpanel" class="tab-pane active" id="bmire">
                         <h3>BMI Rechner </h3>
                         <p> ACHTUNG BMI kann nicht zwischen Muskeln und Fett unterscheiden! Daher soll man vorsichtig bei der Auswertung der Ergebnisse sein!</p>
-                        <p><input type="number" id="gewicht" placeholder="150"/>Gewicht </p>
-                        <p><input type="number" id="groesse" placeholder="1.X"/>Größe </p>
+                        <p><input type="number" id="gewichtB" placeholder="150"/>Gewicht </p>
+                        <p><input type="number" id="groesseB" placeholder="1.X"/>Größe </p>
                         <select id="gesch">
                             <option>männlich</option>
                             <option>weiblich</option>
@@ -28,8 +29,8 @@
                     </div>
                     <div role="tabpanel" class="tab-pane" id="kalre">
                         <h3>Kalorienrechner</h3>
-                        <p>Gewicht:     <input type="number" id="gewicht" placeholder="150" ></p>
-                        <p>Größe in cm: <input type="number" id="groesse" placeholder="175"></p>
+                        <p>Gewicht:     <input type="number" id="gewichtK" placeholder="150"></p>
+                        <p>Größe in cm: <input type="number" id="groesseK" placeholder="175"></p>
                         <p>Alter:       <input type="number" id="alter" placeholder="40"> </p>
                         <p> Aktivitäten</p>
                         <select id="faktor">
@@ -39,7 +40,7 @@
                             <option value="1.9"> Hauptsächlich gehend und stehend</option>
                             <option value="2.2">Körperlich anstrengende Arbeit </option>
                         </select>
-                        <button onklick="javascript:berechnekal()">Rechne </button>
+                        <button onclick="javascript:berechneKal()">Rechne </button>
                         <div id="kalerg"></div>
                     </div>
                 </div>
