--- a/musclepedia/app/views/firstPage.scala.html
+++ b/musclepedia/app/views/firstPage.scala.html
@@ -21,7 +21,10 @@
             </div>
             <br>
         </header>
-        @content
+        <div class="container-fluid">
+           @content 
+        </div>
+        
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
     </body>
